# prefect-first-steps

./: .gitignore  README.md
argo-cd/cert-manager/: Chart.yaml
argo-cd/flink-kubernetes-operator/: Chart.yaml
argo-cd/garage/: values.yaml
argo-cd/homepage/: Chart.yaml
argo-cd/marquez/: Chart.yaml  values.yaml
argo-cd/minio/: Chart.yaml  values.yaml
argo-cd/nimtable/: Chart.yaml  values.yaml
argo-cd/polaris/: Chart.yaml  values.yaml
argo-cd/prefect-server/: Chart.yaml  values.yaml
argo-cd/prefect-worker/: Chart.yaml  values.yaml
argo-cd/trino/: Chart.yaml  values.yaml
cookbooks/dockercomposestack/: README.md  docker-compose.yml  setup-duckdb.sql  setup-polaris.sh  transaction.json
docs/: home.md  quickstart.md
docs/catalogs/: polaris.md
docs/cookbook/: trino-polaris-garage.md
docs/engine/: trino.md
docs/governance/: nimtable.md
docs/object-storage/: garage.md
opentofu/: argo-cd.tf
opentofu/apps/: argo-cd.tf  terraform.tf
opentofu/k8s-plugins/: argo-cd.tf  terraform.tf
prefect/: .Dockerignore  DockerFileSparkTest  Dockerfile  DockerfileDask  DockerfileSpark  README.md  daskcluster.yaml  download_jars.sh  main.py  prefect.yaml  pyproject.toml  spark-test.py
prefect/flows/: main.py
prefect/spark-operator/: DockerFilePrefect  DockerFileSpark  main.py  prefect.yaml
prefect/spark-operator/spark-apps/: example.py
terraform/: dask-kubernetes-operator.tf  dask.tf  marquez.tf  minio-operator.tf  minio.tf  prefect-server.tf  prefect-worker.tf  spark-operator.tf  spark.tf
terragrunt/: root.hcl
terragrunt/argo-cd/: terragrunt.hcl  (+1 more)
(+29 files in other folders)
